# excel_reporter

./: download_script.sh  pyproject.toml  requirements.txt
notebooks/: example.ipynb  test.xlsx  with_test.xlsx
src/ctai_excel_reporter/: __init__.py  base_excel_reporter.py  excel_reporter.py  utils.py
src/ctai_excel_reporter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ctai_excel_reporter/themes/: ctai_theme.json
