[project]
name = "ctai_excel_reporter"
version = "0.0.1"
authors = [
  { name="Azat Sultanov", email="sultanovazatruslanovich@gmail.com" },
]
description = "A helper for making excel report on models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"